--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,12 +6,12 @@ steps:
 
 - id: "Compilando"
   name: 'gcr.io/cloud-builders/go'
-  args: ['go', 'build', 'soma.go']
+  args: [build', 'soma.go']
   env: ["GOPATH=."]
 
 - id: "rodando testes unitarios"
   name: 'gcr.io/cloud-builders/go'
-  args: ['go', 'test']
+  args: [test']
   env: ["GOPATH=."]
 
 - name: 'gcr.io/cloud-builders/docker'
