--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,10 +24,7 @@ steps:
   - '-t'
   - 'gcr.io/$PROJECT_ID/desafio-ci:1.0.0'
   - '.'
-- name: 'gcr.io/$PROJECT_ID/desafio-ci'
-  args: ['version']
-
 images:
-- 'gcr.io/$PROJECT_ID/desafio-ci:latest'
-- 'gcr.io/$PROJECT_ID/desafio-ci:1.0.0'
+  - 'gcr.io/$PROJECT_ID/desafio-ci:1.0.0'
+# - 'gcr.io/$PROJECT_ID/desafio-ci:latest'
 # tags: ['cloud-builders-community']
