--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,5 +26,5 @@ steps:
   - '.'
 images:
   - 'gcr.io/$PROJECT_ID/desafio-ci:1.0.0'
-# - 'gcr.io/$PROJECT_ID/desafio-ci:latest'
-# tags: ['cloud-builders-community']
+  - 'gcr.io/$PROJECT_ID/desafio-ci:latest'
+
