mudando fonte para src

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,11 +7,13 @@ steps:
 - id: "Compilando"
   name: 'gcr.io/cloud-builders/go'
   args: ['build', 'soma.go']
+  dir: 'src'
   env: ["GOPATH=."]
 
 - id: "rodando testes unitarios"
   name: 'gcr.io/cloud-builders/go'
   args: ['test']
+  dir: 'src'
   env: ["GOPATH=."]
 
 - name: 'gcr.io/cloud-builders/docker'
